// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SignalStatsSimulator batch path feature & snapshot (a) full-field snapshot of batch outcomes fixed_n horizonN=1: sorted outcomes match snapshot 1`] = `
[
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600000.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600000.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "suspended",
    },
    "signalDate": "20260125",
    "tsCode": "600001.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "limit_up",
    },
    "signalDate": "20260125",
    "tsCode": "600002.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600003.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20991231",
    "tsCode": "600004.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20260328",
    "tsCode": "600005.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600006.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600006.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600007.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600007.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260219",
        "exitPrice": 14.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.010638297872340496,
        "signalDate": "20260217",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260219",
        "exitPrice": 14.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.010638297872340496,
        "signalDate": "20260217",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600010.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600010.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600011.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600011.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600100.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260310",
        "buyPrice": 16.1,
        "exitDate": "20260311",
        "exitPrice": 16.25,
        "exitReason": "max_hold",
        "holdDays": 1,
        "ret": 0.009316770186335255,
        "signalDate": "20260309",
        "tsCode": "600100.SH",
      },
    },
    "signalDate": "20260309",
    "tsCode": "600100.SH",
  },
]
`;

exports[`SignalStatsSimulator batch path feature & snapshot (a) full-field snapshot of batch outcomes fixed_n horizonN=3: sorted outcomes match snapshot 1`] = `
[
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600000.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600000.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "suspended",
    },
    "signalDate": "20260125",
    "tsCode": "600001.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "limit_up",
    },
    "signalDate": "20260125",
    "tsCode": "600002.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600003.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20991231",
    "tsCode": "600004.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20260328",
    "tsCode": "600005.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "delist",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600006.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600006.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600007.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600007.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260221",
        "exitPrice": 14.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.024822695035460862,
        "signalDate": "20260217",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260221",
        "exitPrice": 14.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.024822695035460862,
        "signalDate": "20260217",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600010.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600010.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260201",
        "exitPrice": 12.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.02892561983471076,
        "signalDate": "20260125",
        "tsCode": "600011.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600011.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600100.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260310",
        "buyPrice": 16.1,
        "exitDate": "20260313",
        "exitPrice": 16.45,
        "exitReason": "max_hold",
        "holdDays": 3,
        "ret": 0.021739130434782483,
        "signalDate": "20260309",
        "tsCode": "600100.SH",
      },
    },
    "signalDate": "20260309",
    "tsCode": "600100.SH",
  },
]
`;

exports[`SignalStatsSimulator batch path feature & snapshot (a) full-field snapshot of batch outcomes strategy maxHold=5: sorted outcomes match snapshot 1`] = `
[
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260203",
        "exitPrice": 12.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.045454545454545414,
        "signalDate": "20260125",
        "tsCode": "600000.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600000.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "suspended",
    },
    "signalDate": "20260125",
    "tsCode": "600001.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "limit_up",
    },
    "signalDate": "20260125",
    "tsCode": "600002.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600003.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20991231",
    "tsCode": "600004.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "insufficient_data",
    },
    "signalDate": "20260328",
    "tsCode": "600005.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260127",
        "exitPrice": 12.25,
        "exitReason": "delist",
        "holdDays": 1,
        "ret": 0.012396694214876103,
        "signalDate": "20260125",
        "tsCode": "600006.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600006.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260203",
        "exitPrice": 12.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.045454545454545414,
        "signalDate": "20260125",
        "tsCode": "600007.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600007.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260203",
        "exitPrice": 12.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.045454545454545414,
        "signalDate": "20260125",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260223",
        "exitPrice": 14.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.03900709219858167,
        "signalDate": "20260217",
        "tsCode": "600008.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600008.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260203",
        "exitPrice": 12.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.045454545454545414,
        "signalDate": "20260125",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260218",
        "buyPrice": 14.1,
        "exitDate": "20260222",
        "exitPrice": 14.55,
        "exitReason": "signal",
        "holdDays": 4,
        "ret": 0.03191489361702127,
        "signalDate": "20260217",
        "tsCode": "600009.SH",
      },
    },
    "signalDate": "20260217",
    "tsCode": "600009.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260202",
        "exitPrice": 12.55,
        "exitReason": "signal",
        "holdDays": 4,
        "ret": 0.037190082644628086,
        "signalDate": "20260125",
        "tsCode": "600010.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600010.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260126",
        "buyPrice": 12.1,
        "exitDate": "20260203",
        "exitPrice": 12.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.045454545454545414,
        "signalDate": "20260125",
        "tsCode": "600011.SH",
      },
    },
    "signalDate": "20260125",
    "tsCode": "600011.SH",
  },
  {
    "outcome": {
      "kind": "filtered",
      "reason": "new_listing",
    },
    "signalDate": "20260125",
    "tsCode": "600100.SH",
  },
  {
    "outcome": {
      "kind": "trade",
      "trade": {
        "buyDate": "20260310",
        "buyPrice": 16.1,
        "exitDate": "20260315",
        "exitPrice": 16.65,
        "exitReason": "max_hold",
        "holdDays": 5,
        "ret": 0.03416149068322971,
        "signalDate": "20260309",
        "tsCode": "600100.SH",
      },
    },
    "signalDate": "20260309",
    "tsCode": "600100.SH",
  },
]
`;

exports[`SignalStatsSimulator batch path feature & snapshot (b) big-mixed multi-tsCode aggregate fixed_n horizonN=1: trades sorted + filtered counts match snapshot 1`] = `
{
  "filteredCounts": {
    "insufficient_data": 2,
    "limit_up": 1,
    "new_listing": 2,
    "suspended": 1,
  },
  "trades": [
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600000.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600006.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600007.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260219",
      "exitPrice": 14.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.010638297872340496,
      "signalDate": "20260217",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260219",
      "exitPrice": 14.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.010638297872340496,
      "signalDate": "20260217",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600010.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600011.SH",
    },
    {
      "buyDate": "20260310",
      "buyPrice": 16.1,
      "exitDate": "20260311",
      "exitPrice": 16.25,
      "exitReason": "max_hold",
      "holdDays": 1,
      "ret": 0.009316770186335255,
      "signalDate": "20260309",
      "tsCode": "600100.SH",
    },
  ],
}
`;

exports[`SignalStatsSimulator batch path feature & snapshot (b) big-mixed multi-tsCode aggregate fixed_n horizonN=3: trades sorted + filtered counts match snapshot 1`] = `
{
  "filteredCounts": {
    "insufficient_data": 2,
    "limit_up": 1,
    "new_listing": 2,
    "suspended": 1,
  },
  "trades": [
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600000.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "delist",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600006.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600007.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260221",
      "exitPrice": 14.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.024822695035460862,
      "signalDate": "20260217",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260221",
      "exitPrice": 14.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.024822695035460862,
      "signalDate": "20260217",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600010.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260201",
      "exitPrice": 12.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.02892561983471076,
      "signalDate": "20260125",
      "tsCode": "600011.SH",
    },
    {
      "buyDate": "20260310",
      "buyPrice": 16.1,
      "exitDate": "20260313",
      "exitPrice": 16.45,
      "exitReason": "max_hold",
      "holdDays": 3,
      "ret": 0.021739130434782483,
      "signalDate": "20260309",
      "tsCode": "600100.SH",
    },
  ],
}
`;

exports[`SignalStatsSimulator batch path feature & snapshot (b) big-mixed multi-tsCode aggregate strategy maxHold=5: trades sorted + filtered counts match snapshot 1`] = `
{
  "filteredCounts": {
    "insufficient_data": 2,
    "limit_up": 1,
    "new_listing": 2,
    "suspended": 1,
  },
  "trades": [
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260203",
      "exitPrice": 12.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.045454545454545414,
      "signalDate": "20260125",
      "tsCode": "600000.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260127",
      "exitPrice": 12.25,
      "exitReason": "delist",
      "holdDays": 1,
      "ret": 0.012396694214876103,
      "signalDate": "20260125",
      "tsCode": "600006.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260203",
      "exitPrice": 12.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.045454545454545414,
      "signalDate": "20260125",
      "tsCode": "600007.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260203",
      "exitPrice": 12.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.045454545454545414,
      "signalDate": "20260125",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260223",
      "exitPrice": 14.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.03900709219858167,
      "signalDate": "20260217",
      "tsCode": "600008.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260203",
      "exitPrice": 12.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.045454545454545414,
      "signalDate": "20260125",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260218",
      "buyPrice": 14.1,
      "exitDate": "20260222",
      "exitPrice": 14.55,
      "exitReason": "signal",
      "holdDays": 4,
      "ret": 0.03191489361702127,
      "signalDate": "20260217",
      "tsCode": "600009.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260202",
      "exitPrice": 12.55,
      "exitReason": "signal",
      "holdDays": 4,
      "ret": 0.037190082644628086,
      "signalDate": "20260125",
      "tsCode": "600010.SH",
    },
    {
      "buyDate": "20260126",
      "buyPrice": 12.1,
      "exitDate": "20260203",
      "exitPrice": 12.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.045454545454545414,
      "signalDate": "20260125",
      "tsCode": "600011.SH",
    },
    {
      "buyDate": "20260310",
      "buyPrice": 16.1,
      "exitDate": "20260315",
      "exitPrice": 16.65,
      "exitReason": "max_hold",
      "holdDays": 5,
      "ret": 0.03416149068322971,
      "signalDate": "20260309",
      "tsCode": "600100.SH",
    },
  ],
}
`;
